--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/reveal.js/dist/reveal.css"
             ]
           },
           "configurations": {
