--- a/angular.json
+++ b/angular.json
@@ -41,8 +41,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/reveal.js/dist/reveal.css"
+              "src/styles.scss"
             ]
           },
           "configurations": {
