--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,10 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
+            "outputPath": {
+              "base": "dist",
+              "browser": ""
+            },
             "polyfills": [
               "zone.js"
             ],
@@ -50,7 +54,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
